# Lgram

./: .flake8  .gitignore  CACHE_IMPLEMENTATION_REPORT.md  CHANGELOG.md  Dockerfile  LICENSE  LINKEDIN_POST.md  MANIFEST.in  MODEL_COMPLETENESS_REPORT.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  RELEASE_NOTES_1.0.51.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.2.1.md  RELEASE_NOTES_1.2.2.md  USAGE_GUIDE.md  advanced_text_data_learning.py  analyze_model_vision.py  build_script.py  cache_analyzer.py  coherence_test_results.csv  daily_life_dataset.txt  debug_contamination.py  debug_sentences.py  debug_t5_styles.py  example_blog_completer.py  formatted_text_safe.txt  idx_to_word.pkl  language_model.pkl  optimization_roadmap.md  output.txt  paraphrased_log.txt  pattern_sources_analysis.py  pyproject.toml  requirements.txt  setup.py  test.py  test_both_prompts.py  test_cache_performance.py  test_cache_simple.py  (+16 more)
.github/workflows/: publish.yml  test.yml
centering_lgram.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: CAEAS_DEVELOPMENT_LOG.md  CAEAS_DEVELOPMENT_PLAN.md  CAEAS_V02_PLAN.md  IMPLEMENTATION_PLAN.md  LINKEDIN_POST.md  PRODUCTION_PLAN.md  REMAINING_FEATURES.md  RESEARCH.md  api.rst  architecture.rst  conf.py  examples.rst  index.rst  quickstart.rst
examples/: basic_analysis.py  caas_full_demo.py  compare_texts.py  demo.py  essay_grader.py  full_test.py  llm_evaluation.py
lgram/: __init__.py  analyzer.py  benchmark.py  brown_calibration.py  cache.py  cli.py  core.py  corpus_modern.py  corpus_samples.py  discourse.py  ellipse_benchmark.py  ellipse_features.py  ellipse_supervised.py  exceptions.py  fetch_wikipedia.py  gcdc_benchmark.py  genre_calibrator.py  model_registry.py  models.py  plugins.py  utils.py
lgram/data/: gender_map.json
lgram/essay/: README.md  __init__.py  cefr_calibration.py  deep_grammar.py  efl.py  export.py  grader.py  layer1_content.py  layer2_cohesion.py  layer3_surface.py  layer4_calibration.py  layer5_confidence.py  layer_grammar.py  layer_llm_content.py  layer_mechanics.py  metrics.py  models.py  prefilter.py  typology.py  utils.py
lgram/models/: __init__.py  auto_correction_finder.py  centering_model.py  centering_theory.py  chunk.py  get_gender.py  merge_lines.py  model_summary.py  simple_language_model.py  transition_pattern_learner.py
lgram/ngrams/: language_model.pkl  transition_patterns.json
logs/: daily_log_2025-04-26.txt  daily_log_2025-04-28.txt  daily_log_2025-04-29.txt  daily_log_2025-04-30.txt  daily_log_2025-05-01.txt  daily_log_2025-05-02.txt  daily_log_2025-05-04.txt  daily_log_2025-05-05.txt  daily_log_2025-05-07.txt  daily_log_2025-05-08.txt  daily_log_2025-05-09.txt  daily_log_2025-05-11.txt  daily_log_2025-05-12.txt  daily_log_2025-05-13.txt  daily_log_2025-05-15.txt  daily_log_2025-05-16.txt  daily_log_2025-05-17.txt  daily_log_2025-05-19.txt  daily_log_2025-05-20.txt  daily_log_2025-05-22.txt  daily_log_2025-05-24.txt  daily_log_2025-05-31.txt  daily_log_2025-07-04.txt  daily_log_2025-08-14.txt  daily_log_2025-08-16.txt  daily_log_2025-08-17.txt
models/: FINAL_OPTIMIZATION_REPORT.md  __init__.py  analyze_transitions.py  auto_correction_finder.py  best_transition_model.keras  bigram_model.pkl  centering_model.py  chunk.py  condordance_model.py  corrections.json  dataset_generator.py  dynamicngramparaphraser.py  final_quality_test.py  get_gender.py  merge_lines.py  model_summary.py  paraphraser.py  performance_optimization_plan.md  performance_test.py  preprocessor.py  simple_benchmark.py  simple_language_model.py  summary_collocations.py  test.py  text_data.txt  text_gen_data.txt  text_generation.py  transition_analyzer.py  transition_model.h5  transition_model.keras  transition_pattern_learner.py  transition_prediction.py  trigram_model.pkl  utils.py  word2vec.py
models/logs/: daily_log_2025-07-04.txt
ngrams/: bigram_model.pkl  collocations.pkl  corrections.json  fivegram_model.pkl  fourgram_model.pkl  model_vis.py  more.txt  sixgram_model.pkl  text_data.txt  thematic_wiki.txt  trigram_model.pkl  word_embedding_model.pt
tests/: test_analyzer.py  test_benchmark.py  test_cli.py  test_edges.py  test_efficiency.py  test_efl.py  test_ellipse.py  test_essay.py  test_gcdc.py  test_genre_calibrator.py  test_lgram.py
