[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "centering-lgram"
version = "2.3.1"
authors = [
    {name = "Ilker Atagun", email = "ilker.atagun@gmail.com"},
]
description = "Discourse Cohesion Analysis Library Based on Centering Theory"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = [
    "centering theory",
    "discourse cohesion",
    "discourse analysis",
    "computational linguistics",
    "nlp",
    "natural language processing",
    "linguistics",
    "cohesion",
]
dependencies = [
    "spacy>=3.4.0",
    # spaCy 3.8's CLI imports click directly, but typer >= 0.22 no longer
    # depends on it — without this pin a fresh install can't even import spacy
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "build>=0.8.0",
    "twine>=4.0.0",
]
essay = [
    "language-tool-python>=2.7.0",
    "pyspellchecker>=0.8.0",
    "openai>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/iatagun/Lgram"
"Bug Reports" = "https://github.com/iatagun/Lgram/issues"
"Source" = "https://github.com/iatagun/Lgram"

[project.scripts]
centering-lgram = "lgram.cli:main"
lgram = "lgram.cli:main"

[tool.setuptools.packages.find]
include = ["lgram*"]

[tool.setuptools.package-data]
lgram = [
    "*.py",
    "models/*.py",
    "data/*.json",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
